fixing horizontal scroll issue

--- a/app/themes/fondfolio-dev/assets/scss/atoms/_anchor.scss
+++ b/app/themes/fondfolio-dev/assets/scss/atoms/_anchor.scss
@@ -10,7 +10,7 @@ a,
   text-decoration: inherit;
   color: $ca-anchor-color;
   font-weight: $t-font-weight-regular;
-  transition: all $a-timing $a-easing;
+  transition: color $a-timing $a-easing;
   position: relative;
 
   &:hover,
