--- a/app/themes/fondfolio-dev/assets/scss/organisms/_blogpost.scss
+++ b/app/themes/fondfolio-dev/assets/scss/organisms/_blogpost.scss
@@ -9,13 +9,6 @@
 
   @include bp($bp-mobile) {
     padding: $d-quad;
-
-    h2 a.is-active {
-      color: $ca-heading-color;
-      font-size: 1.5em;
-      line-height: 1.15;
-      padding-bottom: $d-base;
-    }
   }
   @include bp($bp-tablet) {
     padding: $d-oct;
@@ -65,7 +58,11 @@
     left: 0;
     right: 0;
     background: $ca-nav-background;
-    margin: -12em -12em 0;
+    margin: -7em -4em 0;
+
+    @include bp($bp-desktop) {
+      margin: -12em -12em 0;
+    }
   }
 
   .blogpost-content {
@@ -85,14 +82,30 @@
     }
 
     .blogpost-words {
-      width: 100%;
-
       @include bp($bp-tablet) {
-        width: 65%;
+        padding-left: 2em;
       }
+      p,
+      h2,
+      h3,
+      h4 {
+        width: 100%;
+        margin: auto;
 
-      @include bp($bp-laptop) {
-        width: 70%;
+        @include bp($bp-tablet) {
+          width: 90%;
+        }
+
+        @include bp($bp-desktop) {
+          width: 80%;
+        }
+      }
+      blockquote {
+        &,
+        p {
+          width: 100%;
+          margin-left: 0;
+        }
       }
     }
 
@@ -105,15 +118,10 @@
         width: 140%;
         margin-left: -20%;
       }
-    }
 
-    blockquote {
-      width: 100%;
-      margin-left: 0;
-
-      @include bp($bp-tablet) {
-        width: 110%;
-        margin-left: -30%;
+      @include bp($bp-desktop) {
+        width: 150%;
+        margin-left: -25%;
       }
     }
 
@@ -127,7 +135,7 @@
       font-size: 0.7em;
 
       @include bp($bp-tablet) {
-        margin-left: -20%;
+        margin-left: -25%;
       }
     }
   }
@@ -137,7 +145,7 @@
     padding-bottom: $d-quin;
   }
 
-  h2 a.is-active {
+  .blogpost-mast h2 a {
     color: $ca-heading-color;
     font-size: 2.25em;
     line-height: 1.15;
@@ -167,7 +175,7 @@
     font-size: 1.2em;
 
     @include bp($bp-tablet) {
-      font-size: 1.125em;
+      font-size: 1.4em;
     }
   }
 
